prusti-tests/tests/verify/ui/forall_verify.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/forall_verify.rs:16:27
   |
16 | #[ensures(forall(|x: u32| identity(x) == x + 1))]
   |                           ^^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/forall_verify.rs:17:1
   |
17 | fn test3() {}
   | ^^^^^^^^^^^^^

error: aborting due to previous error

